Added "new" to the lexer and reserved this word in the compiler.
Renamed opaque domain's "new" method "create."  Updated spec and tests.

Changed variables named new in tests to anew.

Added "new" to the spec's list of keywords and to the Chapel language
listing.

Added "new" to keywords in emacs 22.0/22.1 and vim syntaxes.


git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@13188 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Domains_and_Arrays.tex
+++ b/spec/Domains_and_Arrays.tex
@@ -849,7 +849,7 @@ opaque-domain-type:
 \end{syntax}
 
 New index values for opaque domains are explicitly requested via a
-method called \chpl{new}.  Indices can be removed by a method
+method called \chpl{create}.  Indices can be removed by a method
 called \chpl{remove}.
 
 Opaque domains permit more efficient implementations than associative
