--- a/spec/Lexical_Structure.tex
+++ b/spec/Lexical_Structure.tex
@@ -121,15 +121,16 @@ inout
 label
 let
 module
+new
 nil
 of
 on          
 ordered
 otherwise
 out
-param
 \end{chapel} &
 \begin{chapel}
+param
 record      
 reduce      
 return      
@@ -140,9 +141,9 @@ single
 sparse
 subdomain
 sync        
-then        
 \end{chapel} &
 \begin{chapel}
+then        
 type        
 union       
 use         
@@ -151,7 +152,6 @@ when
 where       
 while       
 yield
-$$
 $$
 $$
 \end{chapel} \\
