--- a/spec/chapel_listing.tex
+++ b/spec/chapel_listing.tex
@@ -11,7 +11,7 @@
       if, imag, in, index, int, inout,
       label, let, locale,
       module,
-      nil,
+      new, nil,
       of, on, opaque, ordered, otherwise, out,
       param, pragma,
       range, real, record, reduce, return,
