Fix a small typo in the spec pointed out by a user.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@13200 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Language_Overview.tex
+++ b/spec/Language_Overview.tex
@@ -1138,9 +1138,9 @@ parallel computations, the user can easily express the parallel work,
 and the compiler can easily identify it.
 
 Chapel supports both data parallelism and task parallelism.  To
-efficiently manage both types of parallelism a multi-processor system,
-users can specify how data and work is to be distributed across
-processors by using distribution and locality features.
+efficiently manage both types of parallelism on a multi-processor
+system, users can specify how data and work is to be distributed
+across processors by using distribution and locality features.
 
 \paragraph{Data Parallelism}
 Data parallelism refers to work where the same operations can be
