Added a README to describe how to use our multilocale implementation, as a placeholder for the release and to get Aniruddha started with some multilocale execution in the time being.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@13274 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/doc/release/README
+++ b/doc/release/README
@@ -4,15 +4,16 @@ Chapel doc README
 
 This directory contains the following documentation:
 
-  README.bugs      : how to report bugs or suggestions to the Chapel team
-  README.building  : information about building the Chapel compiler
-  README.chplenv   : setting up your shell environment to use Chapel
-  README.compiling : how to use the Chapel compiler to compile code
-  README.cygwin    : notes for Cygwin users
-  README.executing : execution options for Chapel programs
-  README.extern    : technical note on interfacing with external C routines
-  README.foramt    : technical note on controlling value-to-string formatting
-  README.prereqs   : prerequisites for using Chapel
+  README.bugs        : how to report bugs or suggestions to the Chapel team
+  README.building    : information about building the Chapel compiler
+  README.chplenv     : setting up your shell environment to use Chapel
+  README.compiling   : how to use the Chapel compiler to compile code
+  README.cygwin      : notes for Cygwin users
+  README.executing   : execution options for Chapel programs
+  README.extern      : technical note on interfacing with external C routines
+  README.foramt      : technical note on controlling value-to-string formatting
+  README.multilocale : how to execute Chapel on multiple locales
+  README.prereqs     : prerequisites for using Chapel
 
   chapelLanguageSpec.pdf : the current draft of the Chapel language
                            specification
