Update the spec.
This example appears to be the only documentation that shows how to use an
enumeration. I think maybe it should also be added to the Expressions section.
Maybe in 10.1, list enum-literal as a type of literal-expression, then
define enum-literal in a new 10.3 section?


git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@13458 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Language_Overview.tex
+++ b/spec/Language_Overview.tex
@@ -409,7 +409,7 @@ enumerated types see~\rsec{Enumerated_Types}.
 \begin{example}
 \begin{chapel}
 enum day {sun, mon, tue, wed, thu, fri, sat};
-var d: day = wed;
+var d = day.wed;
 
 writeln(d, " is day number ", d:int, " of the week");
 \end{chapel}
