--- a/spec/Parallelism_and_Synchronization.tex
+++ b/spec/Parallelism_and_Synchronization.tex
@@ -13,6 +13,7 @@ parallel-statement:
   cobegin-statement
   coforall-statement
   begin-statement
+  end-statement
   serial-statement
   atomic-statement
 
@@ -236,6 +237,42 @@ begin-statement:
 The following statements cannot be contained in begin-statements:
 break-statements, continue-statements, yield-statements, and
 return-statements.
+
+\subsection{The End Statement}
+\label{End}
+\index{end@\chpl{end}}
+
+The end statement is a join of all dynamically encountered begins from
+within a statement.  The syntax for the end statement is given by
+\begin{syntax}
+end-statement:
+  `end' statement
+\end{syntax}
+
+The following statements cannot be contained in end-statements:
+break-statements, continue-statements, yield-statements, and
+return-statements.
+
+\begin{example}
+The end statement
+\begin{chapel}
+end {
+  begin stmt1();
+  begin stmt2();
+}
+\end{chapel}
+is similar to the following cobegin statement
+\begin{chapel}
+cobegin {
+  stmt1();
+  stmt2();
+}
+\end{chapel}
+except that if begin-statements are dynamically encountered
+when \chpl{stmt1()} or \chpl{stmt2()} are executed, then the former
+code will wait for these begin-statements to complete whereas the
+latter code will not.
+\end{example}
 
 \subsection{The Ordered Expression}
 \label{Ordered_Expressions}
