removed support for "of"
Removed parsing and handling of "of" syntactic sugar.

Updated tests, modules, spec, and editor modes.  It looks like the
emacs modes do not have "of" or "by"...


git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@13556 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/chapel_listing.tex
+++ b/spec/chapel_listing.tex
@@ -12,7 +12,7 @@
       label, let, locale,
       module,
       new, nil,
-      of, on, opaque, ordered, otherwise, out,
+      on, opaque, ordered, otherwise, out,
       param, pragma,
       range, real, record, reduce, return,
       scan, select, serial, single, sparse, string, subdomain, sync,
