--- a/spec/Types.tex
+++ b/spec/Types.tex
@@ -19,14 +19,11 @@ type-specifier:
   array-type
   sync-type
   single-type
-  of-type
   index-type
 \end{syntax}
 
 Sync and single types are discussed
-in~\rsec{Synchronization_Variables}.  The \sntx{of-type} is a
-syntactic sugar for collections and is defined
-in~\rsec{The_eltType_Type}.
+in~\rsec{Synchronization_Variables}.
 
 Programmers can define their own enumerated types, classes, records,
 unions, and type aliases in type declaration statements summarized by
