--- a/spec/Statements.tex
+++ b/spec/Statements.tex
@@ -96,7 +96,7 @@ block-level-statement:
   empty-statement
   cobegin-statement
   begin-statement
-  end-statement
+  sync-statement
   serial-statement
   atomic-statement
   on-statement
