--- a/spec/chapel_listing.tex
+++ b/spec/chapel_listing.tex
@@ -5,7 +5,7 @@
       begin, bool, break, by,
       class, cobegin, coforall, compilerError, complex, config, const, continue,
       def, distributed, do, domain,
-      else, end, enum,
+      else, enum,
       false, for, forall,
       goto,
       if, imag, in, index, int, inout,
