--- a/spec/Lexical_Structure.tex
+++ b/spec/Lexical_Structure.tex
@@ -99,11 +99,12 @@ class
 cobegin
 coforall
 compilerError
+compilerWarning
 config
 const
-continue
 \end{chapel} &
 \begin{chapel}
+continue
 def
 distributed
 do
@@ -114,9 +115,9 @@ for
 forall
 if
 in
-index
 \end{chapel} &
 \begin{chapel}
+index
 inout
 label
 let
@@ -155,15 +156,15 @@ $$
 $$
 \end{chapel} \\
 \begin{invisible}
-compilerError
+compilerWarning
 \end{invisible} & \begin{invisible}
-compilerError
+compilerWarning
 \end{invisible} & \begin{invisible}
-compilerError
+compilerWarning
 \end{invisible} & \begin{invisible}
-compilerError
+compilerWarning
 \end{invisible} & \begin{invisible}
-compilerError
+compilerWarning
 \end{invisible}
 \end{tabular}
 
