--- a/spec/chapel_listing.tex
+++ b/spec/chapel_listing.tex
@@ -3,7 +3,7 @@
     morekeywords={
       atomic,
       begin, bool, break, by,
-      class, cobegin, coforall, compilerError, complex, config, const, continue,
+      class, cobegin, coforall, compilerError, compilerWarning, complex, config, const, continue,
       def, distributed, do, domain,
       else, enum,
       false, for, forall,
