Added string comparison operators
I was surprised to find today that we don't define <, <=,
>, and >= for strings.  This seems like an oversight rather
than any deep choice (or else my memory is going), so I
added them, added a test of them, updated the spec, and
implemented all string comparisons using a single runtime
primitive _string_compare that wraps strcmp() and behaves
identically to it.

Please remind me if there was a good reason that we didn't
support this already...



git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@13619 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Expressions.tex
+++ b/spec/Expressions.tex
@@ -921,6 +921,18 @@ def >=(a: imag(128), b: imag(128)): bool
 The result of \chpl{a >= b} is true if \chpl{a} is greater than or
 equal to \chpl{b}; otherwise the result is false.
 
+The ordered comparison operators are predefined over strings as follows:
+\begin{chapel}
+def <(a: string, b: string): bool
+def >(a: string, b: string): bool
+def <=(a: string, b: string): bool
+def >=(a: string, b: string): bool
+\end{chapel}
+Comparisons between strings are defined based on the ordering of the
+character set used to represent the string, which is applied
+elementwise to the strings' characters in order.
+
+
 \subsubsection{Equality Comparison Operators}
 \label{Equality_Comparison_Operators}
 \index{==@\chpl{==}}
